test_src/compiler_errors/types/binary/AndBoolError2.b
class AndBoolError2 {
    void test() {
        println(2 & false);
    }
}
